Pushing Exam.js v0.9

--- a/Exam/exam.html
+++ b/Exam/exam.html
@@ -41,14 +41,14 @@
         <div class="add">
             <div class="add-container">
                 <select class="add-subject">
-                    <option value="web" selected>Web</option>
+                    <option value="Select" selected>--</option>
+                    <option value="web" >Web</option>
                     <option value="js">JavaScript</option>
                     <option value="spa">SPA</option>
                 </select>
-                <input type="text" class="add-student-name" placeholder="Name surname">
+                <input type="text" value="namesurname" class="add-student-name" placeholder="Name surname">
                 <input type="number" class="add-grade" min="5" max="10" placeholder="Grade">
-                <button class="add-btn">ADD</i>
-                </button>
+                <button class="add-btn">ADD</button>
             </div>
         </div>
 
@@ -56,9 +56,9 @@
             <div class="passed">
                 <h2 class="passed-title">passed</h2>
 
-                <div class="passed-list">
+                <div class="passed-list" id="passed-0">
 
-                    <div class="item clearfix" id="passed-0">
+                    <div class="item clearfix">
                         <div class="item-description">Roger Federer</div>
                         <div class="right clearfix">
                             <div class="item-value">10</div>
@@ -75,14 +75,14 @@
             <div class="failed">
                 <h2 class="failed-title">failed</h2>
 
-                <div class="failed-list">
+                <div class="failed-list" id="failed-0">
 
-                    <div class="item clearfix" id="failed-0">
+                    <div class="item clearfix">
                         <div class="item-description">John Doe</div>
                         <div class="right clearfix">
                             <div class="item-value">5</div>
                             <div class="item-delete">
-                                <button class="item-delete-btn">x</i>
+                                <button class="item-delete-btn" onclick="delete()">x</i>
                                 </button>
                             </div>
                         </div>
