pushing githubsrch && moviefestMOD

--- a/MovieFest/indexmovie.html
+++ b/MovieFest/indexmovie.html
@@ -30,6 +30,8 @@
                 <br>
                 <input type="number" id="length" class="forwidth" placeholder='Length in min'>
                 <br>
+                <label for="select">Genre</label>
+                <br>
                 <select id="select">
                     <option value="">--</option>
                     <option value="Action">Action</option>
@@ -40,6 +42,9 @@
                 <br>
                 <button id="addmovie">Create movie</button>
                 <br>
+                <div id="errorArea">
+
+                </div>
 
                 <div id="resdiv">
 
@@ -49,7 +54,7 @@
         </div>
         <h6>Program</h6>
         <div class="program">
-            <lable for='datelbl'>Date</lable>
+            <label for='datelbl'>Date</label>
             <br>
             <input type="date" id="datelbl">
             <br>
