pushing bitshow project

--- a/Exam/exam.html
+++ b/Exam/exam.html
@@ -42,7 +42,7 @@
             <div class="add-container">
                 <select class="add-subject">
                     <option value="Select" selected>--</option>
-                    <option value="web" >Web</option>
+                    <option value="web">Web</option>
                     <option value="js">JavaScript</option>
                     <option value="spa">SPA</option>
                 </select>
@@ -82,7 +82,7 @@
                         <div class="right clearfix">
                             <div class="item-value">5</div>
                             <div class="item-delete">
-                                <button class="item-delete-btn" onclick="delete()">x</i>
+                                <button class="item-delete-btn">x</i>
                                 </button>
                             </div>
                         </div>
