--- a/BitShow/showInfo.html
+++ b/BitShow/showInfo.html
@@ -18,11 +18,19 @@
         </div>
     </div>
 
-    <div>
+    <div id="append-info">
 
-        
     </div>
 
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
+
+    <script src="./infoUImod.js"></script>
+    <script src="./bitshowDATAMOD.js"></script>
+    <script src="./infoMainmod.js"></script>
 </body>
 
 </html>
