--- a/BitShow/bitshow.html
+++ b/BitShow/bitshow.html
@@ -32,9 +32,9 @@
 
 
 
-    <script src="./bitshowUIMOD.js"></script>
-    <script src="./bitshowDATAMOD.js"></script>
-    <script src="./bitshowMAINMOD.js"></script>    
+    <!-- <script src="./bitshowUIMOD.js" type="module"></script>
+    <script src="./bitshowDATAMOD.js" type="module"></script> -->
+    <script src="./bitshowMAINMOD.js" type="module"></script>    
 
 
 </body>
