--- a/BitShow/showInfo.html
+++ b/BitShow/showInfo.html
@@ -21,7 +21,8 @@
     </div>
 
     <div id="append-info">
-
+        <h1>Popular Shows</h1>
+       
     </div>
 
     <div id="foot">
@@ -32,9 +33,9 @@
         crossorigin="anonymous"></script>
 
 
-    <script src="./infoUImod.js"></script>
-    <script src="./bitshowDATAMOD.js"></script>
-    <script src="./infoMainmod.js"></script>
+        <!-- <script src="./bitshowUIMOD.js" type="module"></script>
+        <script src="./bitshowDATAMOD.js" type="module"></script> -->
+        <script src="./infoMainmod.js" type="module"></script>  
 </body>
 
 </html>
